--- a/rasha19iros.tex
+++ b/rasha19iros.tex
@@ -62,7 +62,7 @@
 
 \author{Rasha Sheikh \and Philipp Lottes \and Andres Milioto \and Cyrill Stachniss \and Maren Bennewitz \and Thomas Schultz% <-this % stops a space
   \thanks{All authors are with the University of
-    Bonn, Germany.}%
+    Bonn, Germany. This work has partly been supported by the DFG-funded Cluster of Excellence EXC~2070 PhenoRob.}
 }
 
 \begin{document}
@@ -93,8 +93,23 @@ effort.
 \section{INTRODUCTION}
 \label{sec:intro}
 
+The ability to semantically interpret the scene in front of a robot is key for 
+intelligent behavior in several applications. For example, precision farming robots
+need know which type of plant they perceive or autonomous cars need to know 
+which object in their surroundings is a car, a pedestrian, or a cyclists. These 
+classification or semantic segmentation tasks are typically tackled using 
+convolutional neural networks~(CNNs) operating on  image data.  In order to perform 
+well, neural networks need to be training with appropriately annotated datasets. 
 
-Deep neural networks have proven to be exceptionally good at various vision related tasks, including object detection, classification and segmentation. That performance comes however at a cost: a lot of labeled training data is required.  We concern ourselves in this work with semantic segmentation, where the desired output is pixel-wise labeling of all images. Our target application is agricultural weeding using robotic vehicles. 
+The performance of most supervised leaning approaches but especially deep learning 
+systems is related to the quality and quantity of training data. Annotated training
+data, however, has a high cost as often a larger number of labeled training data is 
+required.  In this work, we focus on semantic segmentation of image data obtained 
+from a mobile robot. Semantic segmentation refers to the task of computing a pixel-wise 
+labeling of the images. More concretely, we address the agricultural robotics 
+application in which robot should perform automated weed control. For the semantic 
+segmentation, this means that we need to compute the semantic label ``crop'', ``weed'', 
+or ``misc'' for every pixel in the image.
 
 Given annotated data on one agricultural field and a network that was trained on it, our goal is to transfer this knowledge onto other fields with minimum effort. This is a challenging task given the varying nature of the fields and the acquired images. Datasets from different locations have different crop and weed statistics. They also differ in their soil type and the various small objects that could be found on the ground, such as stones and dried vegetation, that classify as neither crop or weed. Additionally, the robot can acquire images of plants at a certain growth stage in one field, and acquire others at a later time in the same field or in another one where the plants are at a different growth stage. Lastly, artifacts such as contrast changes can be found in the camera images captured from the various locations. 
 
