--- a/bibliography.bib
+++ b/bibliography.bib
@@ -263,6 +263,14 @@
   year={2016}
 }
 
+@inproceedings{zhang2018self,
+  title={Self-learning to detect and segment cysts in lung CT images without manual annotation},
+  author={Zhang, Ling and Gopalakrishnan, Vissagan and Lu, Le and Summers, Ronald M and Moss, Joel and Yao, Jianhua},
+  booktitle={2018 IEEE 15th International Symposium on Biomedical Imaging (ISBI 2018)},
+  pages={1100--1103},
+  year={2018},
+  organization={IEEE}
+}
 
 
 
