--- a/rasha19iros.tex
+++ b/rasha19iros.tex
@@ -58,11 +58,11 @@
 %DIFF 2
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\title{\LARGE \bf Gradient-based Active Learning for Semantic Segmentation\\of Crop and Weed Plants for Agricultural Robots}
+\title{\LARGE \bf Gradient-based Active Learning for Semantic Segmentation of Crop and Weed for Agricultural Robots }
 
 \author{Rasha Sheikh \and Philipp Lottes \and Andres Milioto \and Cyrill Stachniss \and Maren Bennewitz \and Thomas Schultz% <-this % stops a space
   \thanks{All authors are with the University of
-    Bonn, Germany. This work has partly been supported by the DFG-funded Cluster of Excellence EXC~2070 PhenoRob.}
+    Bonn, Germany.}%
 }
 
 \begin{document}
@@ -72,44 +72,16 @@
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{abstract}
-Annotated datasets are essential for supervised learning. However, annotating large datasets to 
-train deep neural networks that perform well is a tedious and time-intensive task. This paper 
-addresses active learning in the context of semantic segmentation with the goal of reducing the 
-human labeling effort. Our target application agricultural robotics and we focus on the task of 
-distinguish crop from weed plants from image data. A key challenge in this application is the 
-transfer of an existing semantic segmentation CNN to a new field. We propose a novel a approach
-that, given a trained model on one field, refines the network on a substantially different field 
-providing an effective method of selecting samples to annotate for supporting the transfer. Our 
-method takes into account the influence of the unlabeled samples on the weights of the network and 
-ranks and selects them accordingly for annotation. We evaluated our approach on two challenging 
-datasets from the agricultural robotics domain and show that we achieve a higher accuracy with a 
-smaller number of samples compared to random sampling for annotation as well as uncertainty-based 
-approaches to select examples for annotation. Thus, our approach reduces the required human labeling 
-effort.
+\begin{abstract} 
+Annotating large datasets to train deep neural networks that perform well is a tedious task. Active learning can be used to minimize the human effort in labeling the images. Our target application is weeding with agricultural robots where there is a need to distinguish crop from weed. Given a trained model on one field, our goal is to refine the network on a completely different field using a more effective method of selecting samples to annotate than random sampling. We design a method that takes into account the influence of the unlabeled samples on the weights of the network, rank them, and choose them accordingly to be annotated. We test our approach on two datasets and show that we achieve a higher accuracy with a smaller number of samples compared to random and uncertainty based approaches. 
 \end{abstract} 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{INTRODUCTION}
 \label{sec:intro}
 
-The ability to semantically interpret the scene in front of a robot is key for 
-intelligent behavior in several applications. For example, precision farming robots
-need know which type of plant they perceive or autonomous cars need to know 
-which object in their surroundings is a car, a pedestrian, or a cyclists. These 
-classification or semantic segmentation tasks are typically tackled using 
-convolutional neural networks~(CNNs) operating on  image data.  In order to perform 
-well, neural networks need to be training with appropriately annotated datasets. 
 
-The performance of most supervised leaning approaches but especially deep learning 
-systems is related to the quality and quantity of training data. Annotated training
-data, however, has a high cost as often a larger number of labeled training data is 
-required.  In this work, we focus on semantic segmentation of image data obtained 
-from a mobile robot. Semantic segmentation refers to the task of computing a pixel-wise 
-labeling of the images. More concretely, we address the agricultural robotics 
-application in which robot should perform automated weed control. For the semantic 
-segmentation, this means that we need to compute the semantic label ``crop'', ``weed'', 
-or ``misc'' for every pixel in the image.
+Deep neural networks have proven to be exceptionally good at various vision related tasks, including object detection, classification and segmentation. That performance comes however at a cost: a lot of labeled training data is required.  We concern ourselves in this work with semantic segmentation, where the desired output is pixel-wise labeling of all images. Our target application is agricultural weeding using robotic vehicles. 
 
 Given annotated data on one agricultural field and a network that was trained on it, our goal is to transfer this knowledge onto other fields with minimum effort. This is a challenging task given the varying nature of the fields and the acquired images. Datasets from different locations have different crop and weed statistics. They also differ in their soil type and the various small objects that could be found on the ground, such as stones and dried vegetation, that classify as neither crop or weed. Additionally, the robot can acquire images of plants at a certain growth stage in one field, and acquire others at a later time in the same field or in another one where the plants are at a different growth stage. Lastly, artifacts such as contrast changes can be found in the camera images captured from the various locations. 
 
@@ -428,11 +400,11 @@ A more detailed breakdown of the methods performance is shown in tables \ref{tab
            \cmidrule{2-5} 
                & Weed & Crop & Weed & Crop \\ 
             \midrule 
-    		  Random & 0.4095 & 0.7278 & 0.4851 & 0.6946  \\ \addlinespace
-    		  Uncertainty & 0.5580 & 0.6646 & 0.2711 & 0.8880  \\ \addlinespace
+    		  Random & \textit{0.4095} & 0.7278 & 0.4851 & \textit{0.6946}  \\ \addlinespace
+    		  Uncertainty & 0.5580 & \textit{0.6646} & \textit{0.2711} & \textbf{0.8880}  \\ \addlinespace
     		  Loss & 0.5331 & 0.8025 & 0.6179 & 0.8112  \\ \addlinespace
-    		  Gradient Norm & 0.5970 & 0.8259 & 0.6136 & 0.8402  \\ \addlinespace
-    		  Gradient Projection & 0.5745 & 0.8365 & 0.6564 & 0.8212  \\ 
+    		  Gradient Norm & \textbf{0.5970} & 0.8259 & 0.6136 & 0.8402  \\ \addlinespace
+    		  Gradient Projection & 0.5745 & \textbf{0.8365} & \textbf{0.6564} & 0.8212  \\ 
             \bottomrule
         \end{tabular}
         \label{tab:pixel_wise_10_stuttgart}
@@ -451,11 +423,11 @@ A more detailed breakdown of the methods performance is shown in tables \ref{tab
            \cmidrule{2-5} 
                & Weed & Crop & Weed & Crop \\ 
             \midrule 
-    		  Random & 0.8723 & 0.5740 & 0.6587 & 0.6474  \\ \addlinespace
-    		  Uncertainty & 0.9476 & 0.4586 & 0.4919 & 0.8854  \\ \addlinespace
+    		  Random & \textit{0.8723} & 0.5740 & 0.6587 & 0.6474  \\ \addlinespace
+    		  Uncertainty & \textbf{0.9476} & \textit{0.4586} & \textit{0.4919} & \textbf{0.8854}  \\ \addlinespace
     		  Loss & 0.9005 & 0.6898 & 0.7811 & 0.7351  \\ \addlinespace
-    		  Gradient Norm & 0.9090 & 0.7390 & 0.7970 & 0.7536  \\ \addlinespace
-    		  Gradient Projection & 0.9030 & 0.7308 & 0.8289 & 0.7375  \\ 
+    		  Gradient Norm & 0.9090 & \textbf{0.7390} & 0.7970 & 0.7536  \\ \addlinespace
+    		  Gradient Projection & 0.9030 & 0.7308 & \textbf{0.8289} & 0.7375  \\ 
             \bottomrule
         \end{tabular}
         \label{tab:object_wise_10_stuttgart}
