--- a/bibliography.bib
+++ b/bibliography.bib
@@ -233,6 +233,42 @@
   organization={Springer}
 }
 
+@InProceedings{lottes2017iros,
+title = {Semi-Supervised Online Visual Crop and Weed Classification in Precision Farming Exploiting Plant Arrangement},
+author = {P. Lottes and C. Stachniss},
+booktitle = iros,
+year = {2017},
+url = {http://www.ipb.uni-bonn.de/wp-content/papercite-data/pdf/lottes17iros.pdf},
+}
+
+@Article{lottes2018ral,
+  author        = {P. Lottes and J. Behley and A. Milioto and C. Stachniss},
+  title         = {Fully Convolutional Networks with Sequential Information for Robust Crop and Weed Detection in Precision Farming},
+  journal       = ral,
+  year          = 2018,
+  volume        = 3,
+  issue         = 4,
+  pages         = {3097-3104},
+  doi           = {10.1109/LRA.2018.2846289},
+  url           = {https://arxiv.org/abs/1806.03412},
+  abstract      = {Reducing the use of agrochemicals is an important component towards sustainable agriculture. Robots that can perform targeted weed control offer the potential to contribute to this goal, for example, through specialized weeding actions such as selective spraying or mechanical weed removal. A prerequisite of such systems is a reliable and robust plant classification system that is able to distinguish crop and weed in the field. A major challenge in this context is the fact that different fields show a large variability. Thus, classification systems have to robustly cope with substantial environmental changes with respect to weed pressure and weed types, growth stages of the crop, visual appearance, and soil conditions. In this paper, we propose a novel crop-weed classification system that relies on a fully convolutional network with an encoder-decoder structure and incorporates spatial information by considering image sequences. Exploiting the crop arrangement information that is observable from the image sequences enables our system to robustly estimate a pixel-wise labeling of the images into crop and weed, i.e., a semantic segmentation. We provide a thorough experimental evaluation, which shows that our system generalizes well to previously unseen fields under varying environmental conditions --- a key capability to actually use such systems in precision framing. We provide comparisons to other state-of-the-art approaches and show that our system substantially improves the accuracy of crop-weed classification without requiring a retraining of the model.},
+}
+
+
+@Article{lottes2017jfr,
+title = {Effective Vision-based Classification for Separating Sugar Beets and Weeds for Precision Farming},
+author = {Lottes, Philipp and H\"oferlin, Markus and Sander, Slawomir and Stachniss, Cyrill},
+journal = {Journal of Field Robotics},
+year = {2017},
+volume = {34},
+issue = {6},
+pages = {1160-1178},
+doi = {10.1002/rob.21675},
+issn = {1556-4967},
+timestamp = {2016.10.5},
+url = {http://www.ipb.uni-bonn.de/wp-content/papercite-data/pdf/lottes16jfr.pdf},
+}
+
 @article{chebrolu2017agricultural,
   title={Agricultural robot dataset for plant classification, localization and mapping on sugar beet fields},
   author={Chebrolu, Nived and Lottes, Philipp and Schaefer, Alexander and Winterhalter, Wera and Burgard, Wolfram and Stachniss, Cyrill},
