--- a/rasha19iros.tex
+++ b/rasha19iros.tex
@@ -77,8 +77,8 @@ Annotated datasets are essential for supervised learning. However, annotating
 large datasets to  train deep neural networks that perform well is a tedious
 and time-intensive task. This paper  addresses active learning in the context
 of semantic segmentation with the goal of reducing the  human labeling effort.
-Our target application agricultural robotics and we focus on the task of
-distinguish crop from weed plants from image data. A key challenge in this
+Our target application is agricultural robotics and we focus on the task of
+distinguishing between crop and weed plants from image data. A key challenge in this
 application is the  transfer of an existing semantic segmentation CNN to a new
 field. We propose a novel a approach that, given a trained model on one field,
 refines the network on a substantially different field  providing an effective
@@ -99,24 +99,24 @@ approach reduces the required human labeling  effort.
 
 The ability to semantically interpret the scene in front of a robot is key for
 intelligent behavior in several applications. For example, precision farming
-robots need know which type of plant they perceive or autonomous cars need to
+robots need to know which type of plant they perceive or autonomous cars need to
 know  which object in their surroundings is a car, a pedestrian, or a
-cyclists. These  classification or semantic segmentation tasks are typically
+cyclist. These  classification or semantic segmentation tasks are typically
 tackled using  convolutional neural networks~(CNNs) operating on  image data.
-In order to perform  well, neural networks need to be training with
+In order to perform  well, neural networks need to be trained with
 appropriately annotated datasets.
 
-The performance of most supervised leaning approaches but especially deep
+The performance of most supervised learning approaches and especially deep
 learning  systems is related to the quality and quantity of training data.
 Annotated training data, however, has a high cost as often a larger number of
 labeled training data is  required.  In this work, we focus on optimizing the
 training set generation for  semantic segmentation of image data obtained
 from a mobile robot. Semantic segmentation refers to the task of computing a
 pixel-wise  labeling of the images. More concretely, we address the
-agricultural robotics  application in which robot should perform automated
+agricultural robotics  application in which robots should perform automated
 weed control. For the semantic  segmentation, this means that we need to
 compute the semantic label ``crop'', ``weed'',  or ``misc'' for every pixel in
-the image. This tasks is particularly challenging  as the field conditions
+the image. This task is particularly challenging  as the field conditions
 often change substantially between years, regions, weather, and  soil
 conditions. Thus, one often tries to adapt and refine existing semantic
 segmentation systems to new field conditions through annotated data from the
@@ -126,7 +126,7 @@ problem is a perfect domain for active  learning approaches trying to reduce
 the required amount of data to be annotated.
 
 Given annotated data on one agricultural field and a network that was trained
-on it,  address the problem of transferring this knowledge to new fields with
+on it, we address the problem of transferring this knowledge to new fields with
 minimum effort.  Datasets from different fields reveal different crop and weed
 statistics. They almost  always differ by soil type, weather condition, or
 various small objects that can be found  on the ground, such as stones, dried
@@ -157,7 +157,7 @@ truth data is needed, which we assume does  not exist. We circumvent this by
 using pseudo ground truth that we obtain with unsupervised  segmentation.  We
 implemented and evaluated framework on  agricultural datasets~\cite{chebrolu2017agricultural} 
 with different characteristics.  Our results indicate that our method produces a
-higher accuracy on both, datasets with a fewer  number of samples compared to
+higher accuracy on both datasets with a fewer  number of samples compared to
 random sampling for annotation as well as uncertainty based approaches.
 
 
